--- a/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/NewMenuPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/NewMenuPage.xaml
@@ -100,8 +100,20 @@
                                     </StackPanel>
                                     <StackPanel Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
                                         <TextBlock
-                                            Text="Стоимость"
-                                            Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"/>
+                                            Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}">
+                                            <StackPanel Orientation="Horizontal">
+                                                <TextBlock
+                                                    Margin="0 0 3.5 0"
+                                                    Text="Стоимость"/>
+                                                <TextBlock
+                                                    VerticalAlignment="Top"
+                                                    Style="{DynamicResource OtherStyleTextBlock}"
+                                                    Margin="3.5 0 0 0"
+                                                    FontSize="10"
+                                                    Text="указывается через запятую [ххх,хх]" 
+                                                    FontStyle="Italic"/>
+                                            </StackPanel>
+                                        </TextBlock>
                                         <Grid>
                                             <Border Style="{DynamicResource OtherShadowBorder}">
                                                 <Border.Effect>
@@ -115,6 +127,7 @@
                                                 </Border.Effect>
                                             </Border>
                                             <TextBox
+                                                PreviewTextInput="PriseValidationTextBox"
                                                 Text="{Binding Prise_Menu}"
                                                 MaxLength="6"
                                                 x:Name="PriseMenuTextBox"
@@ -139,6 +152,7 @@
                                                 </Border.Effect>
                                             </Border>
                                             <TextBox
+                                                PreviewTextInput="NumberValidationTextBox"
                                                 Text="{Binding Prise_Menu}"
                                                 MaxLength="6"
                                                 x:Name="WeightMenuTextBox"
