--- a/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/NewMenuPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/NewMenuPage.xaml
@@ -43,6 +43,7 @@
                                                 </Border.Effect>
                                             </Border>
                                             <TextBox
+                                                PreviewKeyDown="CtrlV_PreviewKeyDown"
                                                 Text="{Binding Name_Menu}"
                                                 MaxLength="50"
                                                 x:Name="NameMenuTextBox"
@@ -67,6 +68,7 @@
                                                 </Border.Effect>
                                             </Border>
                                             <TextBox
+                                                PreviewKeyDown="CtrlV_PreviewKeyDown"
                                                 Text="{Binding Description_Menu}"
                                                 MaxLength="1000"
                                                 x:Name="DescriptionMenuTextBox"
@@ -127,6 +129,7 @@
                                                 </Border.Effect>
                                             </Border>
                                             <TextBox
+                                                PreviewKeyDown="CtrlV_PreviewKeyDown"
                                                 PreviewTextInput="PriseValidationTextBox"
                                                 Text="{Binding Prise_Menu}"
                                                 MaxLength="6"
@@ -152,6 +155,7 @@
                                                 </Border.Effect>
                                             </Border>
                                             <TextBox
+                                                PreviewKeyDown="CtrlV_PreviewKeyDown"
                                                 PreviewTextInput="NumberValidationTextBox"
                                                 Text="{Binding Prise_Menu}"
                                                 MaxLength="6"
@@ -166,10 +170,10 @@
                     </Border>
                     <Border 
                         VerticalAlignment="Top"
-                        Height="400"
+                        Height="450"
                         Margin="3.5"
                         Visibility="Visible" 
-                        Width="300" 
+                        Width="330" 
                         Style="{DynamicResource BorderInformation}">
                         <Grid Margin="10">
                             <StackPanel HorizontalAlignment="Center">
@@ -182,20 +186,20 @@
                                 <Image
                                     x:Name="MenuPhotoImage"
                                     Source="{Binding ImageMenuTable.Image_ImageMenu}"
-                                    Width="250"
+                                    Width="300"
                                     Stretch="Uniform"
-                                    Height="250"
+                                    Height="300"
                                     Margin="0 0 0 10"/>
                                 <Grid Margin="0 10 0 0">
-                                    <Border Style="{DynamicResource OtherShadowBorder}">
+                                    <Border Width="250" Style="{DynamicResource OtherShadowBorder}">
                                         <Border.Effect>
                                             <DropShadowEffect 
-                                            Direction="315"
-                                            Color="{DynamicResource ShadowColor}"
-                                            BlurRadius="5"
-                                            ShadowDepth="0.5"
-                                            Opacity="0.3"
-                                            RenderingBias="Quality"/>
+                                                Direction="315"
+                                                Color="{DynamicResource ShadowColor}"
+                                                BlurRadius="5"
+                                                ShadowDepth="0.5"
+                                                Opacity="0.3"
+                                                RenderingBias="Quality"/>
                                         </Border.Effect>
                                     </Border>
                                     <Button
