--- a/DesctopHITE/AppDateFolder/StyleFolder/BorderDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/BorderDictionary.xaml
@@ -28,11 +28,19 @@
     
     <Style x:Key="BorderInformation" TargetType="Border">
         <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="CornerRadius" Value="0"/>
+        <Setter Property="Visibility" Value="Collapsed"/>
+        <Setter Property="Margin" Value="0 10 0 10"/>
+    </Style>
+
+    <Style x:Key="NeonBorder" TargetType="Border">
+        <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderBrush" Value="#f5f5f5"/>
         <Setter Property="BorderThickness" Value="2"/>
         <Setter Property="CornerRadius" Value="10"/>
-        <Setter Property="Visibility" Value="Collapsed"/>
-        <Setter Property="Margin" Value="0 10 0 10"/>
+        <Setter Property="Margin" Value="0"/>
     </Style>
 
     <Style x:Key="MaskBorder" TargetType="Border">
