--- a/DesctopHITE/PerformanceFolder/PageFolder/SettingsBodyFolder/ScanningPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/SettingsBodyFolder/ScanningPage.xaml
@@ -11,47 +11,142 @@
             <ColumnDefinition Width="2*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <StackPanel Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Left">
+        <StackPanel Margin="10 10 0 0" Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Left">
             <Border 
                 Margin="10"
                 Height="200"
                 Width="600"
                 Visibility="Visible" 
                 Style="{DynamicResource BorderInformation}">
-                <StackPanel Orientation="Vertical" Margin="10">
-                    <TextBlock
-                        Foreground="#462AD8"
-                        Text="РЕЗУЛЬТАТ"
-                        Style="{DynamicResource MainStyleTextBlock}"
-                        FontSize="30"
-                        Margin="0 10 0 10"/>
-                    <StackPanel Margin="10" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
-                        <StackPanel Margin="0 0 0 3.5" Style="{DynamicResource HorizontalDataStackPanel}">
-                            <TextBlock
-                                Style="{DynamicResource MainStyleTextBlock}"
-                                Text="Последнее сканирование было произведено:"
-                                Margin="0 0 3.5 0"/>
-                            <TextBlock
-                                Style="{DynamicResource OtherStyleTextBlock}"
-                                x:Name="WhomCheckedTextBlock"
-                                Margin="3.5 0 0 0"/>
-                            <TextBlock
-                                Text="..."
-                                Visibility="Collapsed"
-                                Style="{DynamicResource OtherStyleTextBlock}"
-                                x:Name="WhomCheckedTextBlock2"
-                                Margin="3.5 0 0 0"/>
+                <Grid>
+                    <Border Style="{DynamicResource NeonBorder}">
+                        <Border.Effect>
+                            <DropShadowEffect Color="#f5f5f5" ShadowDepth="0" Direction="0" BlurRadius="25"  />
+                        </Border.Effect>
+                    </Border>
+                    <StackPanel Orientation="Vertical" Margin="10">
+                        <TextBlock
+                            Foreground="#462AD8"
+                            Text="РЕЗУЛЬТАТ"
+                            Style="{DynamicResource MainStyleTextBlock}"
+                            FontSize="30"
+                            Margin="0 10 0 10"/>
+                        <StackPanel Margin="10" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                            <StackPanel Margin="0 0 0 3.5" Style="{DynamicResource HorizontalDataStackPanel}">
+                                <TextBlock
+                                    Style="{DynamicResource MainStyleTextBlock}"
+                                    Text="Последнее сканирование было произведено:"
+                                    Margin="0 0 3.5 0"/>
+                                <TextBlock
+                                    Style="{DynamicResource OtherStyleTextBlock}"
+                                    x:Name="WhomCheckedTextBlock"
+                                    Margin="3.5 0 0 0"/>
+                                <TextBlock
+                                    Text="..."
+                                    Visibility="Collapsed"
+                                    Style="{DynamicResource OtherStyleTextBlock}"
+                                    x:Name="WhomCheckedTextBlock2"
+                                    Margin="3.5 0 0 0"/>
+                            </StackPanel>
+                            <StackPanel Style="{DynamicResource HorizontalDataStackPanel}">
+                                <TextBlock
+                                    Style="{DynamicResource MainStyleTextBlock}"
+                                    Text="Результат сканирования:"
+                                    Margin="0 0 2 0"/>
+                                <TextBlock
+                                    Style="{DynamicResource OtherStyleTextBlock}"
+                                    Text="Отлично"
+                                    x:Name="ResultScanTextBlock"
+                                    Margin="2 0 0 0">
+                                    <TextBlock.Foreground>
+                                        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                            <GradientStop Color="#00b59c"/>
+                                            <GradientStop Color="#9CFFAC" Offset="1"/>
+                                        </LinearGradientBrush>
+                                    </TextBlock.Foreground>
+                                </TextBlock>
+                                <TextBlock
+                                    Visibility="Collapsed"
+                                    Style="{DynamicResource OtherStyleTextBlock}"
+                                    Text="..."
+                                    x:Name="ResultScanTextBlock2"
+                                    Margin="2 0 0 0"/>
+                            </StackPanel>
+                            <StackPanel Style="{DynamicResource HorizontalDataStackPanel}">
+                                <TextBlock
+                                    Style="{DynamicResource MainStyleTextBlock}"
+                                    Text="Кем сканировалось:"
+                                    Margin="0 0 2 0"/>
+                                <TextBlock
+                                    Style="{DynamicResource OtherStyleTextBlock}"
+                                    x:Name="WhenCheckedTextBlock"
+                                    Margin="2 0 0 0"/>
+                                <TextBlock
+                                    Text="..."
+                                    Visibility="Collapsed"
+                                    Style="{DynamicResource OtherStyleTextBlock}"
+                                    x:Name="WhenCheckedTextBlock2"
+                                    Margin="2 0 0 0"/>
+                            </StackPanel>
+                            <StackPanel Style="{DynamicResource HorizontalDataStackPanel}">
+                                <TextBlock
+                                    Style="{DynamicResource MainStyleTextBlock}"
+                                    Text="Продолжительность сканирования:"
+                                    Margin="0 0 2 0"/>
+                                <TextBlock
+                                    Style="{DynamicResource OtherStyleTextBlock}"
+                                    x:Name="DurationScanTextBlock"
+                                    Margin="2 0 0 0"/>
+                                <TextBlock
+                                    Text="..."
+                                    Visibility="Collapsed"
+                                    Style="{DynamicResource OtherStyleTextBlock}"
+                                    x:Name="DurationScanTextBlock2"
+                                    Margin="2 0 0 0"/>
+                            </StackPanel>
+                            <StackPanel Margin="0 3.5 0 0" Style="{DynamicResource HorizontalDataStackPanel}">
+                                <TextBlock
+                                    Style="{DynamicResource MainStyleTextBlock}"
+                                    Text="Сканирование:"
+                                    Margin="0 0 2 0"/>
+                                <TextBlock
+                                    Style="{DynamicResource OtherStyleTextBlock}"
+                                    Margin="2 0 0 0">
+                                    <StackPanel VerticalAlignment="Center" Orientation="Horizontal">
+                                        <TextBlock x:Name="FilesAtTimeScanningTextBlock" Text="591"/>
+                                        <TextBlock Text=" / "/>
+                                        <TextBlock Text="591"/>
+                                    </StackPanel>
+                                </TextBlock>
+                            </StackPanel>
                         </StackPanel>
-                        <StackPanel Style="{DynamicResource HorizontalDataStackPanel}">
+                    </StackPanel>
+                </Grid>
+            </Border>
+            <Border 
+                Margin="10"
+                Height="110"
+                Width="600"
+                Visibility="Visible" 
+                Style="{DynamicResource BorderInformation}">
+                <Grid>
+                    <Border Style="{DynamicResource NeonBorder}">
+                        <Border.Effect>
+                            <DropShadowEffect Color="#f5f5f5" ShadowDepth="0" Direction="0" BlurRadius="25"  />
+                        </Border.Effect>
+                    </Border>
+                    <StackPanel Orientation="Vertical" Margin="10">
+                        <TextBlock
+                            Foreground="#462AD8"
+                            Text="Ошибки"
+                            Style="{DynamicResource MainStyleTextBlock}"
+                            FontSize="30"
+                            Margin="0 10 0 10"/>
+                        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
                             <TextBlock
+                                x:Name="TitleErrorTextBlock"
                                 Style="{DynamicResource MainStyleTextBlock}"
-                                Text="Результат сканирования:"
-                                Margin="0 0 2 0"/>
-                            <TextBlock
-                                Style="{DynamicResource OtherStyleTextBlock}"
-                                Text="Отлично"
-                                x:Name="ResultScanTextBlock"
-                                Margin="2 0 0 0">
+                                Text="Ошибок не найдено">
                                 <TextBlock.Foreground>
                                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                                         <GradientStop Color="#00b59c"/>
@@ -61,93 +156,12 @@
                             </TextBlock>
                             <TextBlock
                                 Visibility="Collapsed"
+                                x:Name="TitleErrorTextBlock2"
                                 Style="{DynamicResource OtherStyleTextBlock}"
-                                Text="..."
-                                x:Name="ResultScanTextBlock2"
-                                Margin="2 0 0 0"/>
-                        </StackPanel>
-                        <StackPanel Style="{DynamicResource HorizontalDataStackPanel}">
-                            <TextBlock
-                                Style="{DynamicResource MainStyleTextBlock}"
-                                Text="Кем сканировалось:"
-                                Margin="0 0 2 0"/>
-                            <TextBlock
-                                Style="{DynamicResource OtherStyleTextBlock}"
-                                x:Name="WhenCheckedTextBlock"
-                                Margin="2 0 0 0"/>
-                            <TextBlock
-                                Text="..."
-                                Visibility="Collapsed"
-                                Style="{DynamicResource OtherStyleTextBlock}"
-                                x:Name="WhenCheckedTextBlock2"
-                                Margin="2 0 0 0"/>
-                        </StackPanel>
-                        <StackPanel Style="{DynamicResource HorizontalDataStackPanel}">
-                            <TextBlock
-                                Style="{DynamicResource MainStyleTextBlock}"
-                                Text="Продолжительность сканирования:"
-                                Margin="0 0 2 0"/>
-                            <TextBlock
-                                Style="{DynamicResource OtherStyleTextBlock}"
-                                x:Name="DurationScanTextBlock"
-                                Margin="2 0 0 0"/>
-                            <TextBlock
-                                Text="..."
-                                Visibility="Collapsed"
-                                Style="{DynamicResource OtherStyleTextBlock}"
-                                x:Name="DurationScanTextBlock2"
-                                Margin="2 0 0 0"/>
-                        </StackPanel>
-                        <StackPanel Margin="0 3.5 0 0" Style="{DynamicResource HorizontalDataStackPanel}">
-                            <TextBlock
-                                Style="{DynamicResource MainStyleTextBlock}"
-                                Text="Сканирование:"
-                                Margin="0 0 2 0"/>
-                            <TextBlock
-                                Style="{DynamicResource OtherStyleTextBlock}"
-                                Margin="2 0 0 0">
-                                <StackPanel VerticalAlignment="Center" Orientation="Horizontal">
-                                    <TextBlock x:Name="FilesAtTimeScanningTextBlock" Text="591"/>
-                                    <TextBlock Text=" / "/>
-                                    <TextBlock Text="591"/>
-                                </StackPanel>
-                            </TextBlock>
+                                Text="Поиск ошибок"/>
                         </StackPanel>
                     </StackPanel>
-                </StackPanel>
-            </Border>
-            <Border 
-                Margin="10"
-                Height="110"
-                Width="600"
-                Visibility="Visible" 
-                Style="{DynamicResource BorderInformation}">
-                <StackPanel Orientation="Vertical" Margin="10">
-                    <TextBlock
-                        Foreground="#462AD8"
-                        Text="Ошибки"
-                        Style="{DynamicResource MainStyleTextBlock}"
-                        FontSize="30"
-                        Margin="0 10 0 10"/>
-                    <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
-                        <TextBlock
-                            x:Name="TitleErrorTextBlock"
-                            Style="{DynamicResource MainStyleTextBlock}"
-                            Text="Ошибок не найдено">
-                            <TextBlock.Foreground>
-                                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                                    <GradientStop Color="#00b59c"/>
-                                    <GradientStop Color="#9CFFAC" Offset="1"/>
-                                </LinearGradientBrush>
-                            </TextBlock.Foreground>
-                        </TextBlock>
-                        <TextBlock
-                            Visibility="Collapsed"
-                            x:Name="TitleErrorTextBlock2"
-                            Style="{DynamicResource OtherStyleTextBlock}"
-                            Text="Поиск ошибок"/>
-                    </StackPanel>
-                </StackPanel>
+                </Grid>
             </Border>
         </StackPanel>
         <Grid
