--- a/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/NewCategoryPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/NewCategoryPage.xaml
@@ -1,15 +1,15 @@
-﻿<Page 
-    x:Class="DesctopHITE.PerformanceFolder.PageFolder.MenuPageFolder.NewIngredientsPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-    mc:Ignorable="d" 
-    Style="{DynamicResource BodySpacePageStyle}">
+﻿<Page x:Class="DesctopHITE.PerformanceFolder.PageFolder.MenuPageFolder.NewCategoryPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:DesctopHITE.PerformanceFolder.PageFolder.MenuPageFolder"
+      mc:Ignorable="d" 
+      Style="{DynamicResource BodySpacePageStyle}">
     <StackPanel Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0 10 0 0">
         <StackPanel Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
             <TextBlock
-                Text="Название ингридиента"
+                Text="Название категории"
                 Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"/>
             <TextBox
                 Padding="10 10"
@@ -17,7 +17,7 @@
                 MaxHeight="80"
                 Height="auto"
                 TextWrapping="Wrap"
-                Text="{Binding Name_Ingredients}"
+                Text="{Binding Title_MenuCategory}"
                 Style="{DynamicResource MainTextBoxStyle}"
                 Width="720"
                 MaxLength="200"
@@ -46,8 +46,8 @@
                 </StackPanel>
             </Button>
             <Button
-                x:Name="NewIngridientButton"
-                Click="NewIngridientButton_Click"
+                x:Name="NewCategoryButton"
+                Click="NewCategoryButton_Click"
                 Width="180"
                 Height="50"
                 Margin="3.5 0 0 0">
