--- a/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/NewCategoryPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/NewCategoryPage.xaml
@@ -21,8 +21,8 @@
                 Style="{DynamicResource MainTextBoxStyle}"
                 Width="720"
                 MaxLength="200"
-                PreviewTextInput="DateValidationTextBox"
-                x:Name="NameIngridientTextBox"/>
+                PreviewTextInput="TextValidationTextBox"
+                x:Name="NameCategoryTextBox"/>
         </StackPanel>
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal" Margin="0 10 0 0">
             <Button
@@ -53,18 +53,18 @@
                 Margin="3.5 0 0 0">
                 <StackPanel Orientation="Horizontal">
                     <TextBlock
-                        x:Name="ImageNewIngridientButtonTextBlock1"
+                        x:Name="ImageNewCategoryButtonTextBlock1"
                         Text="&#xf278;" 
                         Style="{DynamicResource IconTextBlockStyle}"
                         Margin="0 0 5 0"/>
                     <TextBlock
                         Visibility="Collapsed"
-                        x:Name="ImageNewIngridientButtonTextBlock2"
+                        x:Name="ImageNewCategoryButtonTextBlock2"
                         Text="&#xf158;" 
                         Style="{DynamicResource IconTextBlockStyle}"
                         Margin="0 0 5 0"/>
                     <TextBlock
-                        x:Name="TitleNewIngridientButtonTextBlock"
+                        x:Name="TitleNewCategoryButtonTextBlock"
                         Margin="5 0 0 0"
                         Text="Добавить"/>
                 </StackPanel>
