--- a/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/NewIngredientsPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/NewIngredientsPage.xaml
@@ -21,7 +21,7 @@
                 Style="{DynamicResource MainTextBoxStyle}"
                 Width="720"
                 MaxLength="200"
-                PreviewTextInput="DateValidationTextBox"
+                PreviewTextInput="TextValidationTextBox"
                 x:Name="NameIngridientTextBox"/>
         </StackPanel>
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal" Margin="0 10 0 0">
